--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,23 +2,62 @@ body{
     background: #1a0022;
 }
 #header {
-    background-color: black;
-    /*Opacity start*/
+    background-color: 1a0022;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
     filter: alpha(opacity=80);
     -moz-opacity: 0.80;
     -khtml-opacity: 0.8;
     opacity: 0.8;
-    /*Opacity end*/
     color: white;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 150px;
+    height: 5vh;
     padding: 0;
     margin: 0;
 }
 #header #header-content {
     margin: 10px;
+}
+
+nav {
+	background-color: #E64A19;
+}
+ 
+nav ul {
+	padding: 0;
+    margin: 0;
+	list-style: none;
+	position: relative;
+	}
+	
+nav ul li {
+	display:inline-block;
+	background-color: #E64A19;
+	}
+ 
+nav a {
+	display:block;
+	padding:0 10px;	
+	color:#FFF;
+	font-size:20px;
+	line-height: 60px;
+	text-decoration:none;
+}
+ 
+nav a:hover { 
+	background-color: rgba(0, 0, 0, 0.4);
+    color: #fff;
+}
+
+nav ul ul li {
+	width:170px;
+	float:none;
+	display:list-item;
+	position: relative;
+}
+ 
+nav ul li:hover > ul {
+	display:inherit;
 }
