--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,7 +2,7 @@ body{
     background: #1a0022;
 }
 #header {
-    background-color: 1a0022;
+    background-color: #110022;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
     filter: alpha(opacity=80);
     -moz-opacity: 0.80;
@@ -22,14 +22,27 @@ body{
 }
 
 nav {
-	background-color: #E64A19;
+	background-color: #110022;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+    filter: alpha(opacity=80);
+    -moz-opacity: 0.80;
+    -khtml-opacity: 0.8;
+    opacity: 0.8;
+    color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 5vh;
+    padding: 0;
+    margin: 0;
 }
  
 nav ul {
 	padding: 0;
     margin: 0;
 	list-style: none;
-	position: relative;
+	position: sticky;
 	}
 	
 nav ul li {
