--- a/static/css/main.css
+++ b/static/css/main.css
@@ -34,7 +34,7 @@ nav {
     left: 0;
     width: 100%;
     height: 5vh;
-    padding: 0;
+    padding: 2px;
     margin: 0;
 }
  
@@ -42,7 +42,7 @@ nav ul {
 	padding: 0;
     margin: 0;
 	list-style: none;
-	position: sticky;
+	position: static;
 	}
 	
 nav ul li {
