--- a/main.css
+++ b/main.css
@@ -1,9 +1,12 @@
 body{
     background: #1a0022;
+    color: #fff;
+    font-family:Consolas,Lucida Console,Courier New, monospace;
 }
-h1, p {
-    color: #ddd;
+.body{
+    padding: 7vh;
 }
+
 
 #header {
     background-color: #110022;
@@ -27,19 +30,6 @@ h1, p {
 
 nav {
 	background-color: #110022;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-    filter: alpha(opacity=80);
-    -moz-opacity: 0.80;
-    -khtml-opacity: 0.8;
-    opacity: 0.8;
-    color: white;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 5vh;
-    padding: 2px;
-    margin: 0;
 }
  
 nav ul {
