--- a/main.css
+++ b/main.css
@@ -1,15 +1,15 @@
 body{
-    background: #1a0022;
+    background: #2a0033;
     color: #fff;
     font-family:Consolas,Lucida Console,Courier New, monospace;
 }
 .body{
-    padding: 7vh;
+    padding-top: 10vh;
+    padding-left: 7vh;
 }
 
-
 #header {
-    background-color: #110022;
+    background-color: #1a0022;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
     filter: alpha(opacity=80);
     -moz-opacity: 0.80;
@@ -19,8 +19,8 @@ body{
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 5vh;
+    width: 100vw;
+    height: 6vh;
     padding: 0;
     margin: 0;
 }
@@ -29,7 +29,7 @@ body{
 }
 
 nav {
-	background-color: #110022;
+	background-color: #1a0022;
 }
  
 nav ul {
@@ -67,4 +67,15 @@ nav ul ul li {
  
 nav ul li:hover > ul {
 	display:inherit;
+}
+
+.foot {
+    position:absolute; 
+    bottom:0;
+    background-color: #1a0022;
+    width: 100vw;
+}
+
+a {
+    color: #ccccff;
 }
