--- a/main.css
+++ b/main.css
@@ -80,3 +80,79 @@ a {
     color: #ccccff;
     text-decoration-line: underline;
 }
+
+aside {
+    color: var(--aside, #fff);
+    width: 15vw;
+    float: left;
+    padding-left: 20px;
+    height: 100%;
+    margin: 0px;
+    background: rgb(214, 41, 0);
+    background: linear-gradient(rgb(214, 41, 0) 0%, rgb(255, 255, 255) 50%, rgb(165, 0, 98) 100%);    
+    border-top-right-radius: 80px;
+    position: fixed;
+  }
+  
+  aside a {
+    color: var(--aside, #000);
+    display: block;
+    padding: 15px;
+    padding-left: 30px;
+    padding-top: 5vh;
+    text-decoration: none;
+    -webkit-tap-highlight-color:transparent;
+  }
+  
+  aside a:hover {
+    color: #fff;
+    outline: none;
+    position: relative;
+    background-color: var(--bg, #262626);
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+  }
+  
+  aside a i {
+    margin-right: 5px;
+  }
+  
+  aside.page a:hover::after {
+    content: "";
+    position: absolute;
+    background-color: transparent;
+    bottom: 100%;
+    right: 0;
+    height: 35px;
+    width: 35px;
+    border-bottom-right-radius: 18px;
+    box-shadow: 0 20px 0 0 #fff;
+  }
+  
+  aside .page a:hover::before {
+    content: "";
+    position: absolute;
+    background-color: transparent;
+    top: 38px;
+    right: 0;
+    height: 35px;
+    width: 35px;
+    border-top-right-radius: 18px;
+    box-shadow: 0 -20px 0 0 #262626;
+  }
+  
+  body {
+    font-family: 'Roboto';
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    background-color: var(--bg, #1a1a1a);
+    color: var(--color, #fafafa);
+}
+
+.main{
+    color: var(--text, #f2f2f2);
+    width: 85vw;
+    float: inline-end;
+    padding: 4%;
+}
